<resources>
    <string name="app_name">Carré d\'AS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="carr_d_as">Carré d\'AS</string>
    <string name="title_activity_list_competitions">ListCompetitions</string>
    <string name="submit">Submit</string>
    <string name="confirmed_password_signUp">Confirmed password</string>
    <string name="password_signUp">Password</string>
    <string name="username_signUp">Username</string>
    <string name="forget_your_password">Forget your Password?</string>
    <string name="log_out">Log out</string>

    <string name="comments">Comments</string>
    <string name="title_activity_vote">VoteActivity</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="remember_me">Remember me</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="my_vote">My vote</string>
    <string name="ranking">Ranking</string>
    <string name="details">Details</string>
    <string name="flop">FLOP</string>
    <string name="top">TOP</string>
    <string name="general_information">General information</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_image_competition">ImageCompetitionActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="isPlayer">Are you a player ?</string>
</resources>
